add_executable(elf3d_core_test core_vocabulary_test.cpp)
target_compile_features(elf3d_core_test PRIVATE cxx_std_20)
elf3d_link_object_libraries(elf3d_core_test elf3d_core)
set_target_properties(elf3d_core_test PROPERTIES FOLDER "Elf3D/Tests")
elf3d_enable_warnings(elf3d_core_test)
add_test(NAME elf3d.core_vocabulary COMMAND elf3d_core_test)
