add_executable(elf3d_image_test image_decoder_test.cpp)
target_compile_features(elf3d_image_test PRIVATE cxx_std_20)
elf3d_link_object_libraries(elf3d_image_test elf3d_core elf3d_image)
target_link_libraries(elf3d_image_test PRIVATE elf3d_third_party_stb)
set_target_properties(elf3d_image_test PROPERTIES FOLDER "Elf3D/Tests")
elf3d_enable_warnings(elf3d_image_test)
add_test(NAME elf3d.image_decode COMMAND elf3d_image_test)
